--- a/exercise_2_queue_analysis/person_reid.ipynb
+++ b/exercise_2_queue_analysis/person_reid.ipynb
@@ -98,7 +98,7 @@
     "\n",
     "extractor = torchreid.utils.FeatureExtractor(\n",
     "    model_name='resnet50',\n",
-    "    model_path='resnet50_msmt17_combineall_256x128_amsgrad_ep150_stp60_lr0.0015_b64_fb10_softmax_labelsmooth_flip_jitter.pth',\n",
+    "    model_path='resnet50_msmt17_combineall_256x128_amsgrad_ep150_stp60_lr0.0015_b64_fb10_softmax_labelsmooth_flip_jitter.pth', #download from: https://drive.google.com/file/d/1yiBteqgIZoOeywE8AhGmEQl7FTVwrQmf/view?usp=sharing\n",
     "    device='cuda' if torch.cuda.is_available() else 'cpu'\n",
     ")\n",
     "\n",
